# RosCamera

./: .gitignore  README.md  compile_commands.json
.cache/clangd/index/: CameraParams.h.FBB8B56E1E5ACE78.idx  HikCamera.cpp.6F671C859FC0EB1B.idx  HikCamera.h.48730EF32B248961.idx  MvCameraControl.h.D9BEA3B3572AEF0D.idx  MvErrorDefine.h.C3C12C9DBEA0E73C.idx  MvISPErrorDefine.h.9403BD2CE4C3D6F2.idx  MvObsoleteInterfaces.h.4898276DFA675ED2.idx  ObsoleteCamParams.h.0C1FA05407CD24D5.idx  PixelType.h.BC8CD36C0C1F0CC2.idx  hik_camera_node.cpp.D386BA2258D76219.idx
install/: local_setup.sh  setup.sh
install/hik_camera/lib/hik_camera/: hik_camera_node
install/hik_camera/share/hik_camera/: local_setup.sh  package.dsv  package.ps1  package.sh
install/hik_camera/share/hik_camera/launch/: hik_camera_launch.py
log/: latest_build
src/hik_camera/: CMakeLists.txt
src/hik_camera/include/hik_camera/: CameraParams.h  MvCameraControl.h  PixelType.h
src/hik_camera/include/hik_camera/launch/: hik.py
src/hik_camera/include/hik_camera/lib/32/: MvProducerGEV.cti  MvProducerU3V.cti  libMVGigEVisionSDK.so.4.6.1.2  libMvCamLVision.so.4.6.1.2  libMvCameraControlWrapper.so.4.5.0.1  libMvUsb3vTL.so.4.6.0.3
src/hik_camera/include/hik_camera/lib/64/: MvFGProducerCML.cti  MvFGProducerCXP.cti  MvFGProducerGEV.cti  MvFGProducerXoF.cti  libMVGigEVisionSDK.so.4.6.1.2  libMvUsb3vTL.so.4.6.0.3
src/hik_camera/launch/: hik_camera_launch.py
src/hik_camera/src/: hik_camera_node.cpp
src/hik_camera/src/cameral_func/: HikCamera.cpp  HikCamera.h
src/hik_video_publisher_cpp/: CMakeLists.txt  package.xml
src/hik_video_publisher_cpp/launch/: hik_video_publisher_launch.py
src/hik_video_publisher_cpp/src/: hik_video_publisher.cpp
src/image_process/: CMakeLists.txt  package.xml
src/image_process/include/: ArmorMatcher.cpp  ArmorMatcher.h  process.cpp  process.h
src/image_process/launch/: image_process_launch.py
src/image_process/resources/: labels.txt
src/image_process/src/: image_process_node.cpp
