<?xml version="1.0"?>
<package format="3">
  <name>hik_video_publisher_cpp</name>
  <version>0.0.0</version>
  <description>ROS2 package: publish frames from a local video file to /cameraraw</description>
  <maintainer email="you@example.com">your name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- runtime / exec dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
